# rs_epaint

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  characteristics.rs  colour_mix.rs  components.rs  hue_wheel.rs  mixed.rs  mixer.rs  mod.rs  model_paint.rs  series.rs  shape.rs  target.rs
src/: art_paint.rs  cairox.rs  characteristics.rs  collection.rs  colour_edit.rs  colour_mix.rs  components.rs  display.rs  entry.rs  graticule.rs  hue_wheel.rs  lib.rs  mixed.rs  mixer.rs  model_paint.rs  paint.rs  series.rs  series_paint.rs  shape.rs  standards.rs  target.rs
src/basic_paint/: collection.rs  display.rs  editor.rs  entry.rs  factory.rs  hue_wheel.rs  mod.rs
src/colln_paint/: binder.rs  collection.rs  display.rs  editor.rs  hue_wheel.rs  mod.rs
src/icons/: colln_xpms.rs  file_status_xpms.rs  mixtures_print_xpm.rs  mod.rs  paint_standard_xpms.rs  series_paint_xpm.rs
src/mixed_paint/: collection.rs  components.rs  display.rs  hue_wheel.rs  match_area.rs  mixer.rs  mod.rs  target.rs
src/series_paint/: display.rs  entry.rs  hue_wheel.rs  manager.rs  mod.rs  series.rs
xpms/: colln-new.xpm  colln-open.xpm  colln-save-as.xpm  colln-save.xpm  mcmmtk_rs.xpm  mixtures-print.xpm  paint_standard.xpm  paint_standard_load.xpm  red-dot.xpm  series_paint.xpm  series_paint_load.xpm
