[package]
name = "epaint"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
# TODO: change normalised_angles dependency when it goes public
#normalised_angles = { git = "https://github.com/pwil3058/rs_normalised_angles.git" }
normalised_angles = { path = "../../CRATES/rs_normalised_angles.git" }
# TODO: change pw_gix dependency when it goes public
#pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_gix = { path = "../../CRATES/rs_pw_gix.git" }
# TODO: change pw_pathux dependency when it goes public
#pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
pw_pathux = { path = "../../CRATES/rs_pw_pathux.git" }
chrono = "0.4"
lazy_static = "1.4.0"
num = "0.1"
regex = "0.2"
xml-rs = "0.7.0"

cairo-rs = "0.7.0"
gdk = "0.11.0"
gdk-pixbuf = "0.7.0"
glib = "0.8.0"
gtk = "0.7.0"

[features]
default = ["gtk/v3_18"]
