[package]
name = "epaint"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
colour_math = { git = "https://github.com/pwil3058/rs_colour_math.git" }
normalised_angles = { git = "https://github.com/pwil3058/rs_normalised_angles.git" }
pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }

chrono = "0.4"
lazy_static = "1.4.0"
num = "0.1"
regex = "0.2"
xml-rs = "0.7.0"

cairo-rs = "0.8.0"
gdk = "0.12.0"
gdk-pixbuf = "0.8.0"
glib = "0.9.0"
gtk = "0.8.0"

[features]
default = ["gtk/v3_18"]
