[package]
name = "epaint"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
colour_math = { git = "https://github.com/pwil3058/rs_colour_math_obsolete.git" }
colour_math_gtk = { git = "https://github.com/pwil3058/rs_colour_math_obsolete.git" }
normalised_angles = { git = "https://github.com/pwil3058/rs_normalised_angles.git" }
pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }

chrono = "0.4"
lazy_static = "1.4.0"
num = "0.1"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
xml-rs = "0.7.0"
